refactor: Collectors.toList() -> toList()